# Real-time-AI-Security-Camera-using-ESP32

./: CMakeLists.txt  README.md  main.cpp
api/: routes.cpp  routes.h
config/: config.h
core/: app_state.cpp  app_state.h
services/: detection_service.cpp  detection_service.h  esp32_service.cpp  esp32_service.h
static/: script.js
threads/: capture_thread.cpp  capture_thread.h  processing_thread.cpp  processing_thread.h
utils/: file_utils.cpp  file_utils.h  image_utils.cpp  image_utils.h
